[tool.poetry]
name = "good_coffee_near_me"
version = "0.0.1"
description = "The easiest way to find a coffee near you"
authors = ["fl <imflop@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
sentry-sdk = "^1.9.7"
fastapi = {version = "0.78.0", extras = ["all"]}
orjson = "^3.8.0"
uvicorn = {version = "0.17.6", extras = ["standard"]}
httpx = "^0.23.0"
loguru = "^0.6.0"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.41"
asyncpg = "^0.26.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-xdist = "^2.5.0"
pytest-test-groups = "^1.0.3"
pytest-cov = "^3.0.0"
pytest-faker = "^2.0.0"
black = "^22.8.0"
mypy = "^0.971"
isort = "^5.10.1"
pylint = "^2.15.2"
flake8 = "^5.0.4"
perflint = "^0.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
